RESOLVED FIXED29198
wx port gets stuck in autoscroll mode if mouse leaves the window
https://bugs.webkit.org/show_bug.cgi?id=29198
Summary wx port gets stuck in autoscroll mode if mouse leaves the window
Kevin Watters
Reported 2009-09-11 11:38:07 PDT
In the wx port when clicking and dragging to autoscroll, if the mouse cursor leaves the window and then releases the click, WebKit does not receive a mouse event stopping the scroll.
Attachments
capture the mouse so that we can detect click ups outside the client window (1.73 KB, patch)
2009-09-11 11:39 PDT, Kevin Watters
kevino: review+
kevino: commit-queue-
Kevin Watters
Comment 1 2009-09-11 11:39:19 PDT
Created attachment 39457 [details] capture the mouse so that we can detect click ups outside the client window
Kevin Ollivier
Comment 2 2009-09-13 18:13:33 PDT
Landed in r48346, thanks!
Note You need to log in before you can comment on or make changes to this bug.