Reviewed by Kevin Ollivier.

Fix mouse handling when the mouse leaves the window during mouse down.

https://bugs.webkit.org/show_bug.cgi?id=29198


Canonical link: https://commits.webkit.org/39915@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48346 268f45cc-cd09-0410-ab3c-d52691b4dbfc